# ai-backend-integration-python

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dependencies.py  main.py  schemas.py
app/routers/: chat_rag.py  ingest.py
